# syncline

./: .env.dist  .gitignore  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
scripts/: peek.py
src/syncline/: __init__.py  config.py
src/syncline/client/: hubspot.py
src/syncline/domain/: models.py
tests/unit/: test_config.py  test_models.py  test_smoke.py
